fixed flicker issue when hovering over icons

--- a/Final_Project/htdocs/css/master.css
+++ b/Final_Project/htdocs/css/master.css
@@ -101,9 +101,9 @@
 padding: 0;}
 
 nav {
-  width: 115px;
+  width: 110px;
   height: 100vh;
-  background-color: #352522; 
+  background-color: #39231b; 
   position: fixed;
   top: 0;
   left: 0;
@@ -132,43 +132,41 @@ ul li {
 }
 
 ul li a {
-  display: block;
+  display: flex;
+  align-items: center;
+  gap: 35px;
   width: 100%;
-  height: 70%;
   height: auto;
-  padding: 14px 25px;
+  padding: 10px 25px;
+  text-decoration: none;
+  font-family:'Gill Sans', 'Gill Sans MT','Trebuchet MS', sans-serif;
 
   transition: 0.3s ease, padding-left 0.3s ease;
 }
 
 ul li img {
-    display: block;
-    height: 75%;
-    width: 30%;
-    padding: 0px;
-    margin: 0px;
-    float: left;
+  height: 60px;
+  width: 60px;
+  object-fit: contain;
+  flex-shrink: 0;
 }
 ul li p {
-    display: block;
-    float: left;
-    padding-left: 15%;
-    color: antiquewhite;
-    margin: 0px;
-    padding-right: 0px;
-    transition: color 0.3s ease;
+  color: #ffedcd;
+  margin: 0px;
+  white-space: nowrap;
+  transition: color 0.3s ease;v
 }
 
 ul li a:hover {
-    background: #ffffff;
-    padding-left: 35px;
-    height: 80%;
-    width: 100%;
+  background: #ffffff;
+  padding-left: 35px;
+  height: 40%;
+  width: 100%;
 
 
 }
 
 ul li a:hover > p {
-    color:black;
+  color:#39231b;
 }
 
